# PureRemove-AppWindows

./: README.md  RELEASE_NOTES.md  build.bat  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  image_processor.rs  lib.rs
