[package]
name = "pure-remove"
version = "1.3.0"
edition = "2021"

[lib]
name = "pure_remove_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde           = { version = "1", features = ["derive"] }
anyhow          = "1"
once_cell       = "1"
base64          = "0.22"
tokio           = { version = "1", features = ["rt-multi-thread"] }
rayon           = "1"

# ML inference
ort             = { version = "=2.0.0-rc.12", features = ["download-binaries"] }

# Image processing
image           = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp",
    "gif", "bmp", "tiff", "ico",
    "tga", "pnm", "hdr", "ff", "qoi",
    "rayon",
] }
resvg           = "0"

# Clipboard
arboard         = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
